fix(frontend): eliminate outter scrollbar from sidebar

--- a/frontend/papersfeed.css
+++ b/frontend/papersfeed.css
@@ -88,7 +88,7 @@ h1 {
 .sidebar {
   background-color: white;
   box-shadow: -2px 0 5px rgba(0,0,0,0.1);
-  overflow-y: auto;
+  overflow: hidden;
   transition: all 0.3s ease;
   position: absolute;
   right: 0;
